--- a/flutter_app/realtime_chat_app/android/app/src/main/AndroidManifest.xml
+++ b/flutter_app/realtime_chat_app/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
    <application
         android:label="realtime_chat_app"
         android:name="${applicationName}"
+        android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
