--- a/flutter_app/realtime_chat_app/pubspec.yaml
+++ b/flutter_app/realtime_chat_app/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   # flutter_socket_io: ^0.6.0
-  socket_io_client: ^1.0.2
+  socket_io_client: ^2.0.0-beta.2
 
 dev_dependencies:
   flutter_test:
